[package]
name = "teapot"
version = "0.1.0"
authors = ["Tetrergeru <41305740+Tetrergeru@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
log = "0.4.8"
http = "0.2.1"
regex = "1"
